--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -9,7 +9,8 @@
 }
 .login-providers {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 1.5rem;
     margin: 10px 0;
 }
 
